--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q4 main-wrapper">
+          <div class="main-box">
+            <div class="div1-1 div-style"><p class="text">固定</p></div>
+            <div class="div1-2 div-style"><p class="text">可変</p></div>
+            <div class="div1-3 div-style"><p class="text">固定</p></div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="main-box">
+            <div class="div2-1 div-style"><p class="text">可変</p></div>
+            <div class="div2-2 div-style"><p class="text">可変</p></div>
+            <div class="div2-3 div-style"><p class="text">固定</p></div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
