--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -21,15 +21,18 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+          <div class="box-wrapper">
+            <div class="box8 common"><p class="box-layout">8</p></div>
+            <div class="box5 common"><p class="box-layout">5</p></div>
+            <div class="box1 common"><p class="box-layout">1</p></div>
+            <div class="box7 common"><p class="box-layout">7</p></div>
+            <div class="box4 common"><p class="box-layout">4</p></div>
+            <div class="box6 common"><p class="box-layout">6</p></div>
+            <div class="box2 common"><p class="box-layout">2</p></div>
+            <div class="box3 common"><p class="box-layout">3</p></div>
+            
+            <div class="box9"><p class="box-layout">9</p></div>
+          </div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
