1〜６修正しました。（1回目）

--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -22,14 +22,14 @@
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4 main-wrapper">
           <div class="main-box">
-            <div class="div1-1 div-style"><p class="text">固定</p></div>
-            <div class="div1-2 div-style"><p class="text">可変</p></div>
-            <div class="div1-3 div-style"><p class="text">固定</p></div>
+            <div class="daidai div-style"><p class="text">固定</p></div>
+            <div class="pink div-style"><p class="text">可変</p></div>
+            <div class="skyblue div-style"><p class="text">固定</p></div>
           </div>
           <div class="main-box">
-            <div class="div2-1 div-style"><p class="text">可変</p></div>
-            <div class="div2-2 div-style"><p class="text">可変</p></div>
-            <div class="div2-3 div-style"><p class="text">固定</p></div>
+            <div class="yellow div-style"><p class="text">可変</p></div>
+            <div class="momo div-style"><p class="text">可変</p></div>
+            <div class="green div-style"><p class="text">固定</p></div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
