--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -58,7 +58,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q6 q6--around q6-flex-parent">
-            <p class="q6-flex">flex</pclass=">
+            <p class="q6-flex">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
