--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -33,7 +33,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>2016/04/01</td>
+                <th>2016/04/01</th>
                 <td>食パン</td>
                 <td>チャーハン</td>
                 <td>杏仁豆腐</td>
@@ -42,7 +42,7 @@
               </tr>
 
               <tr>
-                <td>2016/04/02</td>
+                <th>2016/04/02</th>
                 <td>なし</td>
                 <td>ケバブ丼</td>
                 <td>ゼリー</td>
@@ -51,7 +51,7 @@
               </tr>
 
               <tr>
-                <td>2016/04/03</td>
+                <th>2016/04/03</th>
                 <td>納豆ご飯</td>
                 <td>まぐろ定食</td>
                 <td>チョコパン</td>
@@ -60,7 +60,7 @@
               </tr>
 
               <tr>			
-                <td>2016/04/04</td>
+                <th>2016/04/04</th>
                 <td>食パン</td>
                 <td>牛丼</td>
                 <td>アイス</td>
@@ -69,7 +69,7 @@
               </tr>
 
               <tr>
-                <td>合計カロリー</td>
+                <th>合計カロリー</th>
                 <td>10000kcal</td>
                 <td>12000kcal</td>
                 <td>3000kcal</td>
