q7,8,9を95%まで作成しました

--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -31,7 +31,7 @@
             <div class="box2 common"><p class="box-layout">2</p></div>
             <div class="box3 common"><p class="box-layout">3</p></div>
             
-            <div class="box9"><p class="box-layout">9</p></div>
+            <div class="box9 common"><p class="box-layout">9</p></div>
           </div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
