レイアウトパーツ789修正版

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -42,10 +42,10 @@
           <!-- 回答はクラスq8の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <div class="q8">
-            <div class="main-circle">
-              <div class="in-circle"></div>
-              <div class="blue-part"></div>
-            </div>
+            <div class="main-circle"></div>
+              <!-- <div class="in-circle"></div>
+              <div class="blue-part"></div> -->
+            
             
           </div>
           <!-- 回答はクラスq8の要素の中に書いてね -->
